# fluent

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  fluent-engine.lua  imgui.ini  meson.build  meson_options.txt  premake5.lua
cmake/: compile_shaders.cmake
examples/: CMakeLists.txt  meson.build
examples/01_hello_triangle/: CMakeLists.txt  main.cpp
examples/01_initialization/: CMakeLists.txt  main.cpp
examples/02_load_texture/: CMakeLists.txt  main.cpp
examples/03_compute/: CMakeLists.txt  main.cpp
examples/04_model_loading/: CMakeLists.txt  main.cpp
examples/05_pbr/: CMakeLists.txt  main.cpp
examples/common/: sample.hpp
examples/shaders/: main.frag.spv  main.vert.spv
examples/shaders/01_hello_triangle/: main.frag.hlsl  main.vert.glsl  main.vert.glsl.spv  main.vert.hlsl
examples/shaders/02_load_texture/: main.frag.glsl  main.frag.glsl.spv  main.frag.hlsl  main.vert.glsl  main.vert.glsl.spv
examples/shaders/03_compute/: main.comp.glsl  main.comp.hlsl
examples/shaders/04_model_loading/: main.frag.glsl  main.frag.glsl.spv
examples/shaders/05_pbr/: brdf_integration.comp.glsl  brdf_integration.comp.glsl.spv  irradiance.comp.glsl  irradiance.comp.glsl.spv  pano_to_cube.comp.glsl  pano_to_cube.comp.glsl.spv  pbr.frag.glsl  pbr.frag.glsl.spv  pbr.vert.glsl  pbr.vert.glsl.spv  skybox.frag.glsl  skybox.frag.glsl.spv  skybox.vert.glsl  skybox.vert.glsl.spv  specular.comp.glsl  specular.comp.glsl.spv
examples/textures/: statue.dds
sandbox/: CMakeLists.txt  TODO  camera.cpp  camera.hpp  endless_terrain.cpp  endless_terrain.hpp  main.cpp  map.hpp  map_generator.cpp  map_generator.hpp  mesh.cpp  mesh.hpp  mesh_generator.cpp  mesh_generator.hpp  model.cpp  model.hpp  noise.cpp  noise.hpp
sandbox/data/shaders/: main.frag.glsl  main.vert.glsl
sandbox/models/: plane.gltf
sandbox/shaders/: color.frag.glsl  main.frag.glsl  main.vert.glsl  phong.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
sources/app/: application.c  application.h
sources/base/: base.h  log.c  log.h
sources/camera/: camera.c
sources/core/: application.cpp  application.hpp  assert.hpp  base.hpp  camera.cpp  camera.hpp  input.cpp  input.hpp  key_codes.hpp  log.cpp  log.hpp  mouse_codes.hpp  os.cpp  os.hpp  window.cpp  window.hpp
sources/fluent/: fluent.h  fluent.hpp  os.h  renderer.h
sources/fs/: file_system.cpp  file_system.hpp  fs.c  fs.cpp  fs.h  fs.hpp
sources/log/: log.c  log.h  meson.build
sources/math/: linear.h  math.c  math.cpp  math.h  math.hpp
sources/os/: application.c  application.h  camera.c  camera.h  input.c  input.h  key_codes.h  meson.build  mouse_codes.h  timer.h  window.c  window.h
sources/os/thread/: thread.h
sources/os/thread/unix/: thread.c  unix_thread.c
sources/os/thread/windows/: windows_thread.c
sources/os/time/: timer.h
sources/os/time/unix/: unix_timer.c
sources/os/time/windows/: windows_timer.c
sources/os/window/: window.c  window.h  window_private.h
sources/os/window/cocoa/: cocoa_window.h  cocoa_window.m
sources/os/window/sdl/: sdl_window.c  sdl_window.h
sources/os/window/winapi/: winapi_window.c  winapi_window.h
sources/os/window/xlib/: xlib_window.c  xlib_window.h
sources/renderer/: d3d12_backend.cpp  graphic_context.cpp  graphic_context.hpp  meson.build  renderer.cpp  renderer.hpp  renderer_3d.cpp  renderer_3d.hpp  renderer_backend.c  renderer_backend.cpp  renderer_backend.h  renderer_backend.hpp  renderer_backend_functions.h  renderer_enums.cpp  renderer_enums.h  renderer_enums.hpp  resource_loader.c  resource_loader.cpp  resource_loader.h  resource_loader.hpp  shader_reflection.cpp  shader_reflection.h  shader_reflection.hpp  vulkan_backend.cpp
sources/renderer/backend/: render_graph.c  render_graph.h  render_graph_private.h  renderer_backend.c  renderer_backend.h  renderer_enums.h  renderer_enums_stringifier.h  renderer_misc.h  renderer_private.h  resource_loader.c  resource_loader.h  shader_reflection.h
sources/renderer/backend/d3d12/: d3d12_backend.c  d3d12_backend.h  d3d12_reflection.c
sources/renderer/backend/metal/: metal_backend.h  metal_backend.m  metal_graph.h  metal_graph.m  metal_reflection.m
sources/renderer/backend/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_enum_translators.h  vulkan_graph.c  vulkan_graph.h  vulkan_pass_hasher.c  vulkan_pass_hasher.h  vulkan_reflection.c
sources/renderer/d3d12/: d3d12_backend.c  d3d12_backend.cpp  d3d12_backend.h  d3d12_backend.hpp  d3d12_reflection.c  d3d12_reflection.cpp
sources/renderer/metal/: metal_backend.h  metal_backend.hpp  metal_backend.m  metal_backend.mm  metal_reflection.mm
sources/renderer/nuklear/: ft_nuklear.c  ft_nuklear.h
sources/renderer/nuklear/shaders/: nuklear.frag  nuklear.frag.h  nuklear.vert  nuklear.vert.h  shader_nuklear_frag.h  shader_nuklear_frag_spirv.c  shader_nuklear_vert.h  shader_nuklear_vert_spirv.c
sources/renderer/render_graph/: render_graph.c  render_graph.h  render_graph_private.h  vulkan_graph.c  vulkan_graph.h  vulkan_pass_hasher.c  vulkan_pass_hasher.h
sources/renderer/resource_loader/: resource_loader.c  resource_loader.h
sources/renderer/scene/: animation.h  model_loader.c  model_loader.h
sources/renderer/shader_reflection/: metal_reflection.m  shader_reflection.h  vulkan_reflection.c
sources/renderer/vulkan/: vulkan_backend.c  vulkan_backend.cpp  vulkan_backend.h  vulkan_backend.hpp  vulkan_reflection.c  vulkan_reflection.cpp
sources/resource_manager/: resource_manager.cpp  resource_manager.hpp  resources.cpp  resources.hpp
sources/scene/: camera.cpp  components.hpp  entity.cpp  entity.hpp  model_loader.cpp  model_loader.hpp  scene.cpp  scene.hpp
sources/thread/: thread.h
sources/utils/: file_loader.cpp  file_loader.hpp  file_system.cpp  file_system.hpp  hash.hpp  image_loader.cpp  image_loader.hpp  model_loader.cpp  model_loader.hpp  utils.cpp  utils.hpp
sources/window/: input.c  input.h  window.c  window.h  window_private.h
sources/wsi/: wsi.h
subprojects/: .gitignore  glm.wrap  imgui.wrap  sdl2.wrap  spdlog.wrap
tools/: compile_shaders.py
(+8 files in other folders)
